Fixed docs link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <ul>
     <li><a href="https://github.com/marinho/bipolar-server">Source Code</a></li>
-    <li><a href="/docs/">Documentation</a></li>
+    <li><a href="docs/index.html">Documentation</a></li>
 </ul>
 
       </section>
