--- a/index.html
+++ b/index.html
@@ -31,114 +31,12 @@
         <hr>
 
         <section id="main_content">
-          <h1>
-<a name="bipolar-feature-toggle-system" class="anchor" href="#bipolar-feature-toggle-system"><span class="octicon octicon-link"></span></a>Bipolar Feature Toggle System</h1>
-
-<p><a href="https://drone.io/github.com/TDispatch/bipolar/latest"><img src="https://drone.io/github.com/TDispatch/bipolar/status.png" alt="Build Status"></a></p>
-
-<h2>
-<a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview</h2>
-
-<p><strong>Bipolar</strong> is a feature toggle micro service, a bit similar to <strong>django-gargoyle</strong>,
-but with a deep difference: while django-gargoyle is a tool to switch features
-on Django-based projects, Bipolar is a web service with an API with ability to
-be used remotely by any language and framework.</p>
-
-<p>That turns Bipolar a better tool to use in micro-service based architectures,
-specially when there more than one language and framework in the whole system
-and different frontend approaches.</p>
-
-<h2>
-<a name="entities" class="anchor" href="#entities"><span class="octicon octicon-link"></span></a>Entities</h2>
-
-<h3>
-<a name="account" class="anchor" href="#account"><span class="octicon octicon-link"></span></a>Account</h3>
-
-<p>An account contains the other elements, with a shortcode and API key to be used for
-authentation. That is very useful for a system with multiple services to serve.</p>
-
-<h3>
-<a name="feature" class="anchor" href="#feature"><span class="octicon octicon-link"></span></a>Feature</h3>
-
-<p>Each <strong>feature</strong> can be named or structured by the developer taste, as long as it
-keeps a unique small-letters name for each account.</p>
-
-<p>If a system has more than one place to enable or disable the same functionality
-(e.g. business functions in a CRM), the functionality will be a single <strong>Feature</strong>
-which is checked by more than one place in the code (can be different systems,
-servers, languages, no matters).</p>
-
-<h3>
-<a name="qualifier" class="anchor" href="#qualifier"><span class="octicon octicon-link"></span></a>Qualifier</h3>
-
-<p>A <strong>qualifier</strong> is useful to set different permissions for the same features in an
-account. A good example for it is when you have different <strong>account types</strong> in your
-service (i.e. free and paying accounts), so, each account type is able to see the
-features in different ways.</p>
-
-<h3>
-<a name="webhook" class="anchor" href="#webhook"><span class="octicon octicon-link"></span></a>Webhook</h3>
-
-<p>A <strong>webhook</strong> is and end point setup to receive the current account''s permissions
-when something is updated (i.e. a new feature, a new qualifier, a permission is set
-or unset, etc.)</p>
-
-<p>Right now Bipolar supports only Pusher and raw post URLs.</p>
-
-<h2>
-<a name="software" class="anchor" href="#software"><span class="octicon octicon-link"></span></a>Software</h2>
-
-<p>Bipolar is written based on the following third party software:</p>
-
-<ul>
-<li>Python 2.7</li>
-<li>Django 1.6</li>
-<li>django-tastypie</li>
-<li>pusher</li>
-<li>jellyfish</li>
-<li>south</li>
-<li>requests</li>
-<li>responses</li>
-</ul><h2>
-<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h2>
-
-<p>Free and Open Source software based on <strong>Gnu Public License v3</strong>.</p>
-
-<h2>
-<a name="author" class="anchor" href="#author"><span class="octicon octicon-link"></span></a>Author</h2>
-
-<p><strong>Marinho Brandao</strong> </p>
-
-<p>Released at first for <strong>T Dispatch</strong> - <a href="https://tdispatch.com">https://tdispatch.com</a></p>
-
-<h2>
-<a name="to-do" class="anchor" href="#to-do"><span class="octicon octicon-link"></span></a>To do</h2>
-
-<h3>
-<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h3>
-
-<ul>
-<li>Getting started</li>
-<li>Server installation</li>
-<li>Preparing Features, Qualifiers and Webhooks</li>
-<li>Using Bipolar</li>
-<li>Clients</li>
-<li>Examples</li>
-</ul><h3>
-<a name="functions" class="anchor" href="#functions"><span class="octicon octicon-link"></span></a>Functions</h3>
-
-<ul>
-<li>Update tests</li>
-<li>setup.py is not passing 100% - must be fixed and probably cover more</li>
-<li>Django commands for server creation</li>
-<li>Way to deploy with custom settings and static folder</li>
-<li>User invitation</li>
-<li>Nice interface on home page</li>
-<li>Go client</li>
-<li>PHP client</li>
-<li>Ruby client</li>
-<li>JS client</li>
-</ul>
+            <p>This website is still in very baby stage. This is what we have to offer at the moment:</p>
+            <ul>
+                <li><a href="docs/index.html">Documentation</a></li>
+                <li><a href="https://github.com/marinho/bipolar-python-client">Python Client</a></li>
+                <li><a href="https://github.com/marinho/ember-features">EmberJS related plugin</a></li>
+            </ul>
         </section>
 
         <footer>
