Removed docs to use ReadTheDocs.org

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <section id="main_content">
             <p>This website is still in very baby stage. This is what we have to offer at the moment:</p>
             <ul>
-                <li><a href="docs/index.html">Documentation</a></li>
-                <li><a href="https://github.com/marinho/bipolar-python-client">Python Client</a></li>
-                <li><a href="https://github.com/marinho/ember-features">EmberJS related plugin</a></li>
+                <li><a href="//bipolar-server.readthedocs.org/en/latest/">Documentation</a></li>
+                <li><a href="//github.com/marinho/bipolar-python-client">Python Client</a></li>
+                <li><a href="//github.com/marinho/ember-features">EmberJS related plugin</a></li>
             </ul>
         </section>
 
